--- a/NorthwindTradersSpringBoot/src/main/resources/application.properties
+++ b/NorthwindTradersSpringBoot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=NorthwindTradersSpringBoot
-datasource.url=jdbc:mysql://localhost:3306/northwind
-datasource.username=root
-datasource.password=kamyg1717
+spring.datasource.url=jdbc:mysql://localhost:3306/northwind
+spring.datasource.username=root
+spring.datasource.password=kamyg1717
